# projects

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml  monitor.yml
gh_monitor/: cli.py  collector.py  models.py  monitor.py  syncer.py
gh_monitor/generators/: __init__.py  html_gen.py  list_gen.py  markdown_gen.py  toon_gen.py
gh_monitor/templates/: report.html  report.md
plans/: gh-project-monitor-plan.md
src/gh_monitor/: __init__.py  __main__.py  cli.py  collector.py  models.py
src/gh_monitor/generators/: markdown_gen.py
tests/: __init__.py  test_cli.py  test_collector.py  test_generators.py  test_models.py  test_monitor.py  test_syncer.py
