[project]
name = "gh-project-monitor"
version = "0.1.0"
description = "Monitor GitHub project status using gh CLI with TOON, Markdown, and HTML output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "toon-format>=0.1.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.scripts]
gh-monitor = "gh_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gh_monitor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C90"]
ignore = ["B904"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N806"]
"gh_monitor/collector.py" = ["S603", "S607"]
"gh_monitor/generators/*.py" = ["S701"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=gh_monitor --cov-report=html --cov-report=term"
